# trs

./: .gitignore  README.md  docker-compose.yml
bot/: .env.example  pyproject.toml  requirements.in  requirements.txt
bot/src/: __init__.py  api.py  config.py  main.py
bot/src/bot/: __init__.py  middlewares.py  sender.py  utils.py
bot/src/bot/handlers/: __init__.py  commands.py
bot/src/mq/: consume.py  rabbitmq.py
trs/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.in  requirements.txt
trs/src/: config.py  main.py
trs/src/api/: __init__.py  client.py  utils.py
trs/src/api/ai/: client.py
trs/src/api/transcription/: client.py
trs/src/mq/: __init__.py  client.py
trs/src/stream/: __init__.py  detection.py  ffmpeg.py  schemas.py  services.py  utils.py
